Width fix to prevent horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,8 @@ html {
 
 body {
     background-color: rgb(245, 245, 245);
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 
 .inter-default {
@@ -245,7 +247,7 @@ footer {
 a.anchor {
     display: block;
     position: relative;
-    top: -200px;
+    top: -2rem;
     visibility: hidden;
 }
 
